; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_free_rings.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_free_rings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carlu = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.carlu*)* @carlusb_free_rings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carlusb_free_rings(%struct.carlu* %0) #0 {
  %2 = alloca %struct.carlu*, align 8
  %3 = alloca i32, align 4
  store %struct.carlu* %0, %struct.carlu** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %20, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.carlu*, %struct.carlu** %2, align 8
  %7 = getelementptr inbounds %struct.carlu, %struct.carlu* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @ARRAY_SIZE(i32* %8)
  %10 = icmp ult i32 %5, %9
  br i1 %10, label %11, label %23

11:                                               ; preds = %4
  %12 = load %struct.carlu*, %struct.carlu** %2, align 8
  %13 = getelementptr inbounds %struct.carlu, %struct.carlu* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @libusb_free_transfer(i32 %18)
  br label %20

20:                                               ; preds = %11
  %21 = load i32, i32* %3, align 4
  %22 = add i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %4

23:                                               ; preds = %4
  %24 = load %struct.carlu*, %struct.carlu** %2, align 8
  %25 = getelementptr inbounds %struct.carlu, %struct.carlu* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @libusb_free_transfer(i32 %26)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @libusb_free_transfer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
